Section_7/EC2_Launch_Custom_VPC/createInstance.tf
resource "aws_key_pair" "levelup_key" {
  key_name   = "levelup_key"
  public_key = file(var.PATH_TO_PUBLIC_KEY)
}

resource "aws_instance" "WebServer" {
  ami           = lookup(var.AMIS, var.AWS_REGION)
  instance_type = "t2.micro"
  key_name      = aws_key_pair.levelup_key.key_name

  vpc_security_group_ids = [aws_security_group.allow-level_up_ssh.id]
  subnet_id = aws_subnet.level_up_vpc_public_2.id

  tags = {
    Name = "Custom Image"
  }

}
