Section_7/EC2_Launch_Custom_VPC/security_group.tf
# Security Group for Levelup VPC

resource "aws_security_group" "allow-level_up_ssh" {
  vpc_id = aws_vpc.level_up_vpc.id
  name = "allow_level_up_ssh"
  description = "Security group to allow SSH Connection"

egress  {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}

ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}
tags = {
  Name = "allow_level_up_ssh"
}

}
